syntax = "proto3";

package main;
option go_package = "testgrpc.com/mqttapi";

// function/opcodes codes
enum EnumOpcode {
  START = 0;
  STOP = 1;
  PUTFILE = 2;
  GETFILE = 3;
}

// Generic API request
message GenericReqMsg {
  EnumOpcode opcode = 1;
  int32 seqno = 2;
  bytes params = 3;
}


// Messages containing function arguments for specific opcodes
// opcode = START
message StartMsg {
  string startparam1 = 1;
  int32  startparam2 = 2;
}

// opcode = STOP
message StopMsg {
  int32  stopParam = 1;
}

// opcode = SET
message SetMsg {
  int32  setparam = 1;
}

// opcode = GET
message GetMsg {
  string getparam = 1;
}

// The API response
message GenericRespMsg {
  EnumOpcode opcode = 1;
  int32 seqno = 2;
  bytes data = 3;
}

// response for opcode = START, STOP, SET
message Status
{
  int32 status = 1;
}
